Fixed Logo and MegaNav alignments.

--- a/src/client/styles/main.scss
+++ b/src/client/styles/main.scss
@@ -130,7 +130,7 @@
 
 	  	&-SubNavWrapper {
 	  		position: relative;
-	  		width: 325px;
+	  		width: 350px;
 	  		float: left;
 	  		display: table-cell;
 	  		margin: 0;
